Change function name for clarity
Change load_xxx/load_xxx_mirror to buildXxx/buildXxxMirror for consistency and better clarity

--- a/iRT.html
+++ b/iRT.html
@@ -117,16 +117,16 @@
           <button class="debug" onclick="pixelAngstromRatio(randXYZ(jsmolInteractiveObject),jsmolInteractiveObject,1)">px:Angst</button>
           <button class="debug" onclick="Jmol.script(jsmolInteractiveObject,'console')">console</button>
           <br><br>
-          <button class="debug" onclick="load_lin(jsmolInteractiveObject)">linear</button>
-          <button class="debug" onclick="load_lin_mirror(jsmolInteractiveObject)">linear m</button>
-          <button class="debug" onclick="load_seg(jsmolInteractiveObject)">segment</button>
-          <button class="debug" onclick="load_seg_mirror(jsmolInteractiveObject)">segment m</button>
-          <button class="debug" onclick="load_per(jsmolInteractiveObject)">perimeter</button>
-          <button class="debug" onclick="load_per_mirror(jsmolInteractiveObject)">perimeter m</button>
-          <button class="debug" onclick="load_per2(jsmolInteractiveObject)">perimeter2</button>
-          <button class="debug" onclick="load_per2_mirror(jsmolInteractiveObject)">perimeter2 m</button>
-          <button class="debug" onclick="load_fac(jsmolInteractiveObject)">faces</button>
-          <button class="debug" onclick="load_fac_mirror(jsmolInteractiveObject)">faces m</button>
+          <button class="debug" onclick="buildLin(jsmolInteractiveObject)">linear</button>
+          <button class="debug" onclick="buildLinMirror(jsmolInteractiveObject)">linear m</button>
+          <button class="debug" onclick="buildSeg(jsmolInteractiveObject)">segment</button>
+          <button class="debug" onclick="buildSegMirror(jsmolInteractiveObject)">segment m</button>
+          <button class="debug" onclick="buildPer(jsmolInteractiveObject)">perimeter</button>
+          <button class="debug" onclick="buildPerMirror(jsmolInteractiveObject)">perimeter m</button>
+          <button class="debug" onclick="buildPer2(jsmolInteractiveObject)">perimeter2</button>
+          <button class="debug" onclick="buildPer2Mirror(jsmolInteractiveObject)">perimeter2 m</button>
+          <button class="debug" onclick="buildFac(jsmolInteractiveObject)">faces</button>
+          <button class="debug" onclick="buildFacMirror(jsmolInteractiveObject)">faces m</button>
           <br><br>
           <button class="debug" onclick="Jmol.script(jsmolInteractiveObject, 'select *; color gray;' )">gray</button>
           <button class="debug" onclick="Jmol.script(jsmolInteractiveObject, 'select *; color cpk;' )">cpk</button>
