Add both pages to index

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         inteligência espacial</a>
       (ou <i>spatial ability</i>), para fins acadêmicos. Ainda em constante desenvolvimento mas já funcional.
       <br>
-      Acesse a página <a href="iRT.html">
-        aqui</a>.
-      
+      Página para a tese do doutorado (em desenvolvimento): <a href="iRT.html">iRT.html</a>.
+      <br>
+      Página para o artigo no JoVE (2023) : <a href="iRT_JoVE.html">iRT_JoVE.html</a>.
 
       
     </div>    
