Create new .js file for 2025 data collection
Make copy of previous object_config.js file from the lines tasks project, and changed current file to match the previous tasks (ball and stick, polygon Fill and S&M) while keeping improvements already made to the code.

--- a/iRT.html
+++ b/iRT.html
@@ -15,9 +15,8 @@
   <div style="text-align:right"><span id="debug_switch" style="color:#404040" onclick="debug()">Debug</span></div>
   <!-- <section class="w3-container w3-center w3-animate-opacity"> -->
   <section id="tab_navigation" class="debug">
-    <!-- <div style="background:#404070"> -->
     <div class="dev-div">
-      You are in debug mode! If this was a mistake, please click again in the corner of the screen, or reload the page and forget you saw this! ;D
+      You are in debug mode! If this was a mistake, please click again in the corner of the screen, or reload the page, and forget you saw this! ;D
       <br>
       <!-- webpage Links -->
       <a class="dev-div" href="rodrigocns.github.io">
@@ -91,6 +90,7 @@
     </div>
     <button onclick="nextStage();prepMolecule(task_n);openFullscreen()">Next</button>
   </section>
+  
   <section id="tab_teste" class="stage" style="display:none">  <!-- JSmol interactive tasks -->
     <div class="debug" id="indicador_orientacao" style="background-color:gray">Test</div> <!-- orientation coordinates -->
 
