--- a/iRT.html
+++ b/iRT.html
@@ -93,13 +93,14 @@
   </section>
   
   <section id="tab_paper_task" class="ContentStage" style="display:none"> <!-- paper-to-screen task -->
-    <img id="imgmap" src="images/img (1).jpg" usemap="#task_alternatives_map">
+    <!-- common height of notebooks is 768px. Image is 1625x1250, and resized to 60% its size in page -->
+    <img id="imgmap" src="images/img (1).jpg" usemap="#task_alternatives_map" height="750"> 
     <map name="task_alternatives_map">
-      <area shape="rect" coords=" 205,819,  414,1117" alt="A" onclick="imgAlternativeChosen('A')">
-      <area shape="rect" coords=" 458,819,  667,1117" alt="B" onclick="imgAlternativeChosen('B')">
-      <area shape="rect" coords=" 721,819,  930,1117" alt="C" onclick="imgAlternativeChosen('C')">
-      <area shape="rect" coords=" 979,819, 1188,1117" alt="D" onclick="imgAlternativeChosen('D')">
-      <area shape="rect" coords="1231,819, 1440,1117" alt="E" onclick="imgAlternativeChosen('E')">
+      <area shape="rect" coords=" 119,480, 247,660" alt="A" onclick="imgAlternativeChosen('A')">
+      <area shape="rect" coords=" 273,480, 401,660" alt="B" onclick="imgAlternativeChosen('B')">
+      <area shape="rect" coords=" 430,480, 558,660" alt="C" onclick="imgAlternativeChosen('C')">
+      <area shape="rect" coords=" 585,480, 713,660" alt="D" onclick="imgAlternativeChosen('D')">
+      <area shape="rect" coords=" 737,480, 865,660" alt="E" onclick="imgAlternativeChosen('E')">
     </map>
   </section>
   <section id="tab_iRT" class="ContentStage" style="display:none">  <!-- JSmol interactive tasks -->
