Update task script
Add paper task answers values to forms pipeline

--- a/iRT.html
+++ b/iRT.html
@@ -87,11 +87,12 @@
         <input type="hidden" name="pxRatio">
         <input type="hidden" name="browser">
         <input type="hidden" name="modelName">
+        <input type="hidden" name="paperAnswers">
+        
       </form>
     </div>
     <button onclick="nextStage();prepMolecule(task_n);openFullscreen()">Next</button>
   </section>
-  
   <section id="tab_paper_task" class="ContentStage" style="display:none"> <!-- paper-to-screen task -->
     <!-- common height of notebooks is 768px. Image is 1625x1250, and resized to 60% its size in page -->
     <img id="imgmap" src="images/img (1).jpg" usemap="#task_alternatives_map" height="750"> 
