Update scrips with paperAnswer sent to gsheets
Padronize field as paperAnswer.
Change some entries from paperAnswers to paperAnswer

--- a/iRT.html
+++ b/iRT.html
@@ -87,7 +87,7 @@
         <input type="hidden" name="pxRatio">
         <input type="hidden" name="browser">
         <input type="hidden" name="modelName">
-        <input type="hidden" name="paperAnswers">
+        <input type="hidden" name="paperAnswer">
         
       </form>
     </div>
