--- a/iRT.html
+++ b/iRT.html
@@ -197,6 +197,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
     </script>
   </section>
+
+  <!-- interactive Rotation Tasks -->
   <section id="tab_iRT" class="ContentStage" style="display:none">  <!-- JSmol interactive tasks -->
     <div class="debug" id="indicador_orientacao" style="background-color:gray">Test</div> <!-- orientation coordinates -->
 
@@ -253,6 +255,8 @@ document.addEventListener('DOMContentLoaded', function() {
     <div id=jsmol_molecula_console class="debug">Console (wip)</div>
     
   </section>
+  
+  <!-- End of trials -->
   <section id="tab_fim" class="ContentStage" style="display:none"> <!-- Final words -->
     "Muito obrigado por participar da nossa pesquisa!"<br>
     "Thank you for taking part in our research!"<br>
@@ -261,8 +265,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
     <br><br><br><br>
   </section>
-  <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
 
+  <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
   <br>
   <div style="position:sticky; bottom:0; font-size:x-small; ">
     Last updated 2025/03/17
