Update paper task end
Paper task end now hides last image and shows a "Next" button to call the nextStage() function.

--- a/iRT.html
+++ b/iRT.html
@@ -112,6 +112,8 @@
       <area shape="rect" coords=" 585,480, 713,660" alt="D" onclick="imgAlternativeChosen('D')">
       <area shape="rect" coords=" 737,480, 865,660" alt="E" onclick="imgAlternativeChosen('E')">
     </map>
+    <br>
+    <button id="endOfPaperTasksButton" onclick="nextStage()" style="visibility:hidden">Next</button>
   </section>
 
   <!-- corsi block tapping task from jsPsych -->
