--- a/iRT.html
+++ b/iRT.html
@@ -320,22 +320,6 @@
       }
       timeline.push(corsi2);
 
-      const corsi2_if = {
-        timeline: [corsi3],
-        conditional_function: function(){
-          // get the data from the previous trial,
-          // and check which key was pressed
-          //const test = jsPsych.data.results.trials[5].correct;
-//          if (jsPsych.data.results.trials[3].correct || jsPsych.data.results.trials[5].correct){
-//            return true;
-//          } else {
-//            return false;
-//          }
-          return (jsPsych.data.results.trials[3].correct || jsPsych.data.results.trials[5].correct);
-        }
-      }
-      timeline.push(corsi2_if);
-
       var corsi3 = {
         type: jsPsychCorsiBlocks,
         blocks: corsiBlocksCoordinates,
@@ -347,6 +331,17 @@
           {sequence: corsiSeq[3], mode: 'input'  , prompt: '3b input'  },
         ]
       }
+
+      //Corsi conditional node from 2 to 3
+      const corsi2_if = {
+        timeline: [corsi3],
+        conditional_function: function(){
+          // get the data from the previous trial,
+          // and check which key was pressed
+          return (jsPsych.data.results.trials[3].correct || jsPsych.data.results.trials[5].correct);
+        }
+      }
+      timeline.push(corsi2_if);
 
 
       //display data
