--- a/iRT.html
+++ b/iRT.html
@@ -430,7 +430,7 @@
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
   <br>
   <div style="position:sticky; bottom:0; font-size:x-small; ">
-    Last updated 2025/03/17
+    Last updated: <script> document.write(document.lastModified);</script>
   </div>
   <script src="javascript/scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
 </body>
