--- a/iRT.html
+++ b/iRT.html
@@ -429,7 +429,7 @@
 
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
   <br>
-  <div style="position:absolute; bottom:5px; font-size:x-small; ">
+  <div style="position:absolute; bottom:5px; left:5px; font-size:x-small; ">
     <script>
       document.write(`Last updated: `+ document.lastModified);
     </script>
