--- a/iRT.html
+++ b/iRT.html
@@ -297,23 +297,16 @@
       //create timeline
       var timeline = [];
     
-      var jsPsychPreload = {
-        type: jsPsychHtmlKeyboardResponse,
-        stimulus: "",
-        choices: "NO_KEYS",
-        trial_duration: 200,
-        on_finish: function(data){
-          document.getElementById("jspsych-content").style.visibility="hidden";
-        },
-      };
-      timeline.push(jsPsychPreload);
-
       //define welcome message trial
       var welcome = {
         type: jsPsychHtmlButtonResponse,
         stimulus: introductionText,
         choices: ['Next'],
-        post_trial_gap: 1000
+        post_trial_gap: 1000,
+        //function to hide the corsi block content
+        on_load: function(){
+          document.getElementById("jspsych-content").style.visibility="hidden";
+        },
       };
       timeline.push(welcome);
 
