--- a/iRT.html
+++ b/iRT.html
@@ -120,7 +120,7 @@
       <area shape="rect" coords=" 737,480, 865,660" alt="E" onclick="imgAlternativeChosen('E')">
     </map>
     <br>
-    <!-- start jsPsych experiment -->
+    <!-- end paper task -->
     <button id="endOfPaperTasksButton" style="visibility:hidden" 
       onclick='nextStage(); document.getElementById("jspsych-content").style.visibility="visible";'>
       Next
