--- a/iRT.html
+++ b/iRT.html
@@ -61,7 +61,7 @@
         
         <!-- Template: Text in Html: <input name="column header in gsheets" type="input type"> -->
         Name: <input name="fname" type="text" placeholder="Ex: Rodrigo Alves" size="30" autofocus><br>
-        Email: <input name="email" type="email" placeholder="Ex: rodrigo@gmail.com" size="30"><br>
+        Email: <input name="email" type="text" placeholder="Ex: rodrigo@gmail.com" size="30"><br>
         <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Download backup copy of data<br>
         <br>
         <!--
