Add corsiScore value to form
Add corsiScore value to form

--- a/iRT.html
+++ b/iRT.html
@@ -102,6 +102,7 @@
         <input type="hidden" name="browser">
         <input type="hidden" name="modelName">
         <input type="hidden" name="paperAnswer">
+        <input type="hidden" name="corsiScore">
         
       </form>
     </div>
