Add corsi trial and correct answers count
Add corsi trial count and corsi correct answers (corsiTrialCount and corsiTrialCorrect) to .js files and to forms.

--- a/iRT.html
+++ b/iRT.html
@@ -103,6 +103,8 @@
         <input type="hidden" name="modelName">
         <input type="hidden" name="paperAnswer">
         <input type="hidden" name="corsiScore">
+        <input type="hidden" name="corsiTrialCorrect">
+        <input type="hidden" name="corsiTrialCount">
         
       </form>
     </div>
@@ -146,6 +148,7 @@
     <p>Corsi block-tapping task</p>
 
     <div id='corsi-result' style="display:none">
+      <p><span id="corsi-correct-span">0</span> out of <span id="corsi-count-span">2</span> correct answers.</p>
       <p>Your score was <span id='corsi-score-span'>1</span>. </p>
       <p>Please, proceed to the next task </p>
       <button id="endOfCorsiButton"  onclick='nextStage()'>
