--- a/iRT.html
+++ b/iRT.html
@@ -145,7 +145,8 @@
   <!-- paper-to-screen task -->
   <section id="tab_paper_task" class="ContentStage" style="display:none"> 
     <div style="position: relative; display: inline-block;">
-      <!-- common height of notebooks is 768px. Image is 1625x1250, and resized to 60% its size in page -->
+      <!-- common height of notebooks is 768px.
+        Image is 1625x1250, and was resized to 60% of its size in page -->
       <img id="imgmap" src="images/img (1).jpg" usemap="#task_alternatives_map" height="750"> 
       <map name="task_alternatives_map" style="cursor: pointer">
         <area shape="rect" coords=" 119,480, 247,660" alt="A" onclick="imgAlternativeChosen('A')">
@@ -154,7 +155,7 @@
         <area shape="rect" coords=" 585,480, 713,660" alt="D" onclick="imgAlternativeChosen('D')">
         <area shape="rect" coords=" 737,480, 865,660" alt="E" onclick="imgAlternativeChosen('E')">
       </map>
-
+      
       <div class="hide-cursor"
         style="
           position: absolute;
