--- a/iRT.html
+++ b/iRT.html
@@ -206,11 +206,13 @@
         </td>
         <td id="tdCenter">
           <span id="iRT-instructions">
-              In the next section you will perform three rotation tasks. When you click on the 'GO!'
-            button, two objects will appear in opposite corners of the screen. Your goal is to rotate
-            the object on the right until it closely matches the object on the left as best as you can.
-            To rotate the object, click and drag your mouse over it.  After completing 
-            each task, click on the 'DONE!' button.
+            <p> In the next section you will perform rotation tasks.</p> 
+            <p> When you click on the 'GO!' button, two objects will appear in
+              opposite corners of the screen. </p>
+            <p> Your goal is to rotate the object on the right until it closely
+              matches the object on the left as best as you can.</p>
+            <p> To rotate the object, click and drag your mouse over it. </p>
+            <p> After completing each task, click on the 'DONE!' button.</p>
           </span>
           <br>
           <div class="debug">Duration: <output id="timer_onscreen" ></output> s</div>
