--- a/iRT.html
+++ b/iRT.html
@@ -62,7 +62,6 @@
         <!-- Template: Text in Html: <input name="column header in gsheets" type="input type"> -->
         Name: <input name="fname" type="text" placeholder="Ex: Rodrigo Alves" size="30" autofocus><br>
         Email: <input name="email" type="text" placeholder="Ex: rodrigo@gmail.com" size="30"><br>
-        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Download backup copy of data<br>
         <br>
 
         
@@ -267,10 +266,14 @@
 
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
   <br>
-  <div style="position:absolute; bottom:5px; left:5px; font-size:x-small; ">
+  <div style="position:absolute; bottom:5px; left:5px; font-size:x-small; " class="unhider">
     <script>
       document.write(`Last updated: `+ document.lastModified);
     </script>
+    <span class="hidden-elem" >
+      | Download backup copy of data?
+      <input type="checkbox" onchange="localSaveSwitch(this)"> 
+    </span>
   </div>
   <script src="javascript/scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
 </body>
