Change id name for clarity
Change id "endOfPaperTaksButton" to "button-end-psvtr"

--- a/iRT.html
+++ b/iRT.html
@@ -168,7 +168,7 @@
     </div> 
     <br>
     <!-- end paper task -->
-    <button id="endOfPaperTasksButton" style="visibility:hidden" 
+    <button id="button-end-psvtr" style="visibility:hidden" 
       onclick='nextStage(); document.getElementById("jspsych-content").style.visibility="visible";'>
       Next
     </button>
